test/exercises/c-ray/c-ray.toosmall.good
c-ray.chpl:113: error: pixelType 'int(8)' isn't big enough to store 8 bits per color
